deployment/go-feature-flag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-go-feature-flag-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo-goff
  template:
    metadata:
      labels:
        app: open-feature-demo-goff
    spec:
      containers:
        - name: open-feature-demo-go-ff
          image: thomaspoignant/go-feature-flag-relay-proxy:v0.3.0
          ports:
            - containerPort: 1031
          # volumeMounts:
          # - name: goff-config-volume
          #   mountPath: /goff/
      # volumes:
      #   - name: goff-config-volume
      #     configMap:
      #       name: goff-config
