deployment/fib-service-spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-fib-service
  labels:
    app: open-feature-fib-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-fib-service
  template:
    metadata:
      labels:
        app: open-feature-fib-service
      annotations:
        openfeature.dev: "enabled"
        openfeature.dev/featureflagconfiguration: "end-to-end"
    spec:
      containers:
        - name: fib-service
          image: ghcr.io/open-feature/playground-fib-service:v0.1.1 
          args:
            - flagd
          ports:
            - containerPort: 30000
---
# Service exposed using NodePort
apiVersion: v1
kind: Service
metadata:
  name: open-feature-fibonacci-service
spec:
  type: NodePort
  selector:
    app: open-feature-fib-service
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 30001
      targetPort: 30001
      nodePort: 30001
