deployment/playground-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-playground-app
  labels:
    app: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo
  template:
    metadata:
      labels:
        app: open-feature-demo
      annotations:
        openfeature.dev: "enabled"
        openfeature.dev/featureflagconfiguration: "end-to-end"
    spec:
      containers:
        - name: open-feature-demo
          image: ghcr.io/open-feature/playground-app:v0.1.1
          args:
            - flagd
          ports:
            - containerPort: 30000
---
# Service exposed using NodePort
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-service
spec:
  type: NodePort
  selector:
    app: open-feature-demo
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 30000
      targetPort: 30000
      nodePort: 30000
